fixed links and overlaps

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-:root {
+html :root {
   height: 100%;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
 }
 
 @layer base {
